# msc-prep

./: .gitignore  README.md
factorio-solver/: init.sh  pyproject.toml  run_example.sh
factorio-solver/outputs/: recipe_matrix.csv
factorio-solver/src/factorio_solver/: __main__.py  graph.py  machines.py  matrix.py  recipes.py  solver.py
factorio-solver/src/factorio_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
factorio-solver/tests/: test_solver.py
micrograd_AndrejKarpathy/: micrograd_lecture.ipynb
micrograd_AndrejKarpathy/setup/: step02_install_modules.sh  step03_register_kernel.sh
micrograd_andrej_karpathy/: micrograd.py  micrograd_lecture.ipynb
mnist/: .env  requirements.txt  setup.sh  setup_torch.sh
mnist/notebooks/: mnist_explore.ipynb  mnist_torch_01_mlp.ipynb  mnist_torch_02_cnn.ipynb
mnist/src/: CNN.py  NNN.py  data.py  layer.py  model.py  sweep.py  tool.py  train.py  vis.py
statistics/mit-18.05/exercises/: class4_Rquestions.R  studio1.R  tutorial_A_Basics.R  tutorial_B_RandomNumbers.R
