[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "factorio-solver"
version = "0.1.0"
description = "A Python production-chain solver for Factorio"
requires-python = ">=3.11"
dependencies = [
	"numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
